--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,13 +48,20 @@ table {
     border-spacing: 0;
 }
 
-button {
+button{
     padding: 0;
     border: 0;
     font: inherit;
     color: inherit;
     background-color: transparent;
     cursor: pointer;
+}
+
+input{
+    padding: 0;
+    border: 0;
+    font: inherit;
+    color: inherit;
 }
 
 h1, h2, h3, h4, h5, h6 {
