debug comments page finished, client directory restruction, insertion css-modules

--- a/client/src/components/Debug/Debug.module.css
+++ b/client/src/components/Debug/Debug.module.css
@@ -17,7 +17,7 @@
     justify-content: center;
 }
 
-button{
+.button{
     width: 150px;
     padding: 5px 0;
     background-color: white;
@@ -26,7 +26,7 @@ button{
     border: 1px solid transparent
 }
 
-button:hover{
+.button:hover{
     background-color: #efeded;
     border: 1px solid #a5a5a5;
 }
