--- a/client/src/components/common/common.module.css
+++ b/client/src/components/common/common.module.css
@@ -41,3 +41,9 @@
     display: flex;
     flex-direction: row;
 }
+
+.center {
+    display: inline-flex;
+    justify-content: center;
+    width: 100%;
+}
